--- a/slideshow/css/slideshow.css
+++ b/slideshow/css/slideshow.css
@@ -2,7 +2,7 @@
 
 /*
  Hive Colony Framework
- Copyright (C) 2008-2015 Hive Solutions Lda.
+ Copyright (c) 2008-2015 Hive Solutions Lda.
 
  This file is part of Hive Colony Framework.
 
