--- a/player/css/player.css
+++ b/player/css/player.css
@@ -47,6 +47,11 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
     background-color: #000000;
     float: left;
     opacity: 0.7;
+    -o-opacity: 0.7;
+    -ms-opacity: 0.7;
+    -moz-opacity: 0.7;
+    -khtml-opacity: 0.7;
+    -webkit-opacity: 0.7;
     position: relative;
     width: 100%;
 }
@@ -86,11 +91,21 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
     float: left;
     height: 36px;
     opacity: 0.8;
+    -o-opacity: 0.8;
+    -ms-opacity: 0.8;
+    -moz-opacity: 0.8;
+    -khtml-opacity: 0.8;
+    -webkit-opacity: 0.8;
     width: 36px;
 }
 
 .jquery-player .jquery-player-button:hover {
     opacity: 1.0;
+    -o-opacity: 1.0;
+    -ms-opacity: 1.0;
+    -moz-opacity: 1.0;
+    -khtml-opacity: 1.0;
+    -webkit-opacity: 1.0;
 }
 
 .jquery-player .jquery-player-button.play {
@@ -166,11 +181,21 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
     height: 36px;
     margin: 0px 10px 0px 10px;
     opacity: 0.8;
+    -o-opacity: 0.8;
+    -ms-opacity: 0.8;
+    -moz-opacity: 0.8;
+    -khtml-opacity: 0.8;
+    -webkit-opacity: 0.8;
     width: 60px;
 }
 
 .jquery-player .jquery-player-branding:hover {
     opacity: 1.0;
+    -o-opacity: 1.0;
+    -ms-opacity: 1.0;
+    -moz-opacity: 1.0;
+    -khtml-opacity: 1.0;
+    -webkit-opacity: 1.0;
 }
 
 .jquery-player .jquery-player-volume-control {
@@ -196,7 +221,10 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
 
 .jquery-player.mini .jquery-player-controls {
     border-radius: 6px 6px 0px 0px;
+    -o-border-radius: 6px 6px 0px 0px;
+    -ms-border-radius: 6px 6px 0px 0px;
     -moz-border-radius: 6px 6px 0px 0px;
+    -khtml-border-radius: 6px 6px 0px 0px;
     -webkit-border-radius: 6px 6px 0px 0px;
     margin-left: auto;
     margin-right: auto;
@@ -217,6 +245,11 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
     height: 36px;
     margin: 0px 0px 0px 0px;
     opacity: 0.8;
+    -o-opacity: 0.8;
+    -ms-opacity: 0.8;
+    -moz-opacity: 0.8;
+    -khtml-opacity: 0.8;
+    -webkit-opacity: 0.8;
     overflow: hidden;
     padding: 0px 0px 0px 0px;
     width: 36px;
@@ -224,4 +257,9 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
 
 .jquery-player.mini .jquery-player-volume-control:hover {
     opacity: 1.0;
+    -o-opacity: 1.0;
+    -ms-opacity: 1.0;
+    -moz-opacity: 1.0;
+    -khtml-opacity: 1.0;
+    -webkit-opacity: 1.0;
 }
