--- a/slideshow/css/slideshow.css
+++ b/slideshow/css/slideshow.css
@@ -31,6 +31,11 @@ __license__   = Hive Solutions Confidential Usage License (HSCUL)
     display: none;
     left: 0px;
     opacity: 0.8;
+    -o-opacity: 0.8;
+    -ms-opacity: 0.8;
+    -moz-opacity: 0.8;
+    -khtml-opacity: 0.8;
+    -webkit-opacity: 0.8;
     position: absolute;
     width: 100%;
     z-index: 90;
